some general stuff added

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -16,6 +16,7 @@
         {% block sidebar %}
           <ul class="sidebar-nav">
             <li><a href="{% url 'index' %}">Home</a></li>
+            <li><a href="{% url 'blog_list' %}">Blog list</a></li>
           </ul>
        {% endblock %}
         </div>
