--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -4,8 +4,8 @@
  {% endblock %}
 {% block content%}
     <h1>Blogs</h1>
-   <div>chuj ci w cycte </div>
+   <div>hejka </div>
     {% for content in blog_list%}
-        <div>{{ content }}</div>
+        <div>{{ content.title }}</div>
     {% endfor %}
 {% endblock %}
