--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -17,6 +17,7 @@
           <ul class="sidebar-nav">
             <li><a href="{% url 'index' %}">Home</a></li>
             <li><a href="{% url 'blog_list' %}">Blog list</a></li>
+            <li><a href="{% url 'create_blog' %}">Create your article!</a></li>
           </ul>
        {% endblock %}
         </div>
